# oncvpsp

./: .fprettify.rc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  ford.md  fortitude.toml  pyproject.toml  set_path
.github/workflows/: cmake-multi-platform.yaml  gh-pages.yml
app/: CMakeLists.txt  oncvpsp.f90  oncvpsp_nr.f90  oncvpsp_r.f90
cmake/: FindLibxc.cmake.ignore
doc/: 32_Ge_annotated.toml  program_overview.md
scripts/: compare_psml_template.sh  compare_r_template.sh  compare_template.sh  run.sh  run_nr_template.sh  run_r_template.sh
src/: CMakeLists.txt  Makefile  adams_m.f90  aeo.f90  check_data.f90  check_data_m.f90  const_basis.f90  der2exc.f90  der2exc_m.f90  dft_m.f90  dirac_m.f90  dpnint.f90  dpnint_m.f90  eresid.f90  eresid_m.f90  exc_internal_m.f90  exc_libxc.f90  exc_libxc_list_m.F90  exc_libxc_m.F90  exc_libxc_m_stub.f90  exc_libxc_parser_m.f90  exc_libxc_stub.f90  exc_libxc_xc_messages_m.f90  exc_off_pbe.f  exc_off_pbe_m.f90  exchdl.f90  excpzca.f90  excwig.f90  fphsft.f90  fphsft_r.f90  fpovlp.f90  fpovlp_r.f90  functionals.F90  gg1cc.f90  gnu_script.f90  gnu_script_r.f90  gnuplot_m.f90  gp1cc.f90  gpp1cc.f90  input_text_m.f90  (+93 more)
src/oncvpsp/: CMakeLists.txt  ae_atom_m.f90  aeo_m.f90  atom_config_m.f90  check_data.f90  const_basis.f90  constants_m.f90  construct_rhoc_model_m.f90  der2exc.f90  dpnint.f90  eresid.f90  exc_libxc.f90  exc_libxc_stub.f90  exc_m.f90  exc_off_pbe.f90  exchdl.f90  excpzca.f90  excwig.f90  fphsft.f90  fphsft_r.f90  fpovlp.f90  fpovlp_r.f90  functionals.F90  functionals_m.F90  functionals_messages_m.f90  functionals_parser_m.f90  gg1cc.f90  gnu_script.f90  gnu_script_r.f90  gp1cc.f90  gpp1cc.f90  hdf5_utils.f90  interpolate_m.f90  ldirac_m.f90  ldiracfb.f90  ldiracfs.f90  libxc_list_m.F90  linout.f90  linout_r.f90  lsch_m.f90  (+68 more)
src/pyoncvpsp/io/output/: __init__.py  text.py
src/xmlf90-wxml/: CMakeLists.txt  m_wxml_buffer.f90  m_wxml_core.f90  m_wxml_dictionary.f90  m_wxml_elstack.f90  m_wxml_text.f90  xmlf90_wxml.f90
tests/: conftest.py  nested_approx.py  test_refs.py
tests/data/: TEST.sh
tests/refs/: 40_Zr_icmod3.out  40_Zr_icmod5.out  79_Au_lxc.out
